Select2 Style - Fix: Adding dark mode style for the item remove button.

--- a/assets/dev/scss/direction/editor-dark-mode.scss
+++ b/assets/dev/scss/direction/editor-dark-mode.scss
@@ -907,6 +907,10 @@ body.rtl .elementor-control-type-gallery {
 		.select2-selection__choice {
 			background-color: $theme-dark-gray;
 			border-color: $theme-dark-gray;
+
+			&__remove {
+				color: $theme-dark-gray-lightest;
+			}
 		}
 	}
 
